fixed issues on smaller screens

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -137,6 +137,11 @@ blockquote {
             color: $quote-text;
         }
     }
+    
+    @include media-query($on-palm) {
+        padding: 1em 0;
+        font-size: 80%;
+    }
 }
 
 
